<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.vertexcache</groupId>
    <artifactId>vertexcache</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>
    <modules>
        <module>vertex-cache-common</module>
        <module>vertex-cache-server</module>
        <module>vertex-cache-console</module>
    </modules>
    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <maven.jar.plugin.version>2.4</maven.jar.plugin.version>

        <commons-collections4.version>4.4</commons-collections4.version>
        <commons-lang3.version>3.14.0</commons-lang3.version>

        <junit.version>4.13.2</junit.version>
        <junit.jupiter.version>5.8.0-M1</junit.jupiter.version>

        <log4j-api.version>2.23.1</log4j-api.version>
        <log4j-core.version>2.23.1</log4j-core.version>
        <mockito-core.version>5.11.0</mockito-core.version>

        <vertexcache.common.version>1.0.0</vertexcache.common.version>
    </properties>

    <dependencies>

        <!-- JUnit Jupiter -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.jupiter.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.jupiter.version}</version>
            <scope>test</scope>
        </dependency>

        <!-- JUnit (Vintage) -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>

        <!-- Mockito Core -->
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>${mockito-core.version}</version>
            <scope>test</scope>
        </dependency>

    </dependencies>

</project>
